assignment3/hw3.txt
Q1: Does the patch improve the performance of ls or make it worse? 

The patch removes an if statement "if (ignore_mode == IGNORE_DEFAULT)" in the 
case 'A' section and replaces it with just the line 
"ignore_mode = IGNORE_DOT_AND_DOTDOT". This is faster since the program no 
longer has to check the value of ignore_mode.

Q2. If your company adopts this patched version of Coreutils instead of the 
default one, what else should you watch out for? Might this new version of 
Coreutils introduce other problems with your application?

The company should watch out for programs where the order of flags mattered. If
there were places where the ls -A -a was used instead of ls -a -A (since they 
used to do the same thing), those will no longer do the same thing.

Q3. What happens when this script is invoked on an empty file like /dev/null, 
and why?

I got the following error when I ran on /dev/null:
Traceback (most recent call last):
File "randline.py", line 70, in <module>
    main()
File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
File "/usr/local/cs/Python-2.7.9/lib/python2.7/random.py", line 275, in choice
    return seq[int(self.random() * len(seq))]  
    # raises IndexError if seq is empty
IndexError: list index out of range
This is because randline.py will try to print random lines from an empty file.
So the chooseLine function is trying to get the length of something that is 
null.

Q4. What happens when this script is invoked with Python 3 rather than Python 2,
and why? (You can run Python 3 on the SEASnet hosts by using the command python3
instead of python.)

When I run with python3, I get the following syntax error:
  File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax
This is because of a change in python3 syntax where it does not support 
automatic tuple unpacking, therefore the line (errno, strerror) is invalid. This
post explains why this was removed: https://www.python.org/dev/peps/pep-3113/



